@@ -5,7 +5,7 @@
 \title{geom_tiplab}
 \usage{
 geom_tiplab(mapping = NULL, hjust = 0, align = FALSE,
-  linetype = "dotted", line.size = 1, ...)
+  linetype = "dotted", linesize = 1, ...)
 }
 \arguments{
 \item{mapping}{aes mapping}
@@ -16,7 +16,7 @@ geom_tiplab(mapping = NULL, hjust = 0, align = FALSE,
 
 \item{linetype}{linetype for adding line if align = TRUE}
 
-\item{line.size}{line size of line if align = TRUE}
+\item{linesize}{line size of line if align = TRUE}
 
 \item{...}{additional parameter}
 }
